# kit.h

./: README.md  app_atto.c  app_atto.h  app_glfw.c  app_glfw.h  app_imgui.cc  app_imgui.h  app_opengl.h  app_raylib.c  app_raylib.h  app_rgfw.c  app_rgfw.h  app_sdl2.c  app_sdl2.h  app_sdl3.c  app_sdl3.h  app_tigr.c  app_tigr.h  app_vulkan.c  app_vulkan.h  canvas_gl3_glfw.cc  canvas_gl3_sdl2.cc  canvas_gl3_sdl3.cc  canvas_wgpu_glfw.cc  canvas_wgpu_sdl2.cc  canvas_wgpu_sdl3.cc  cl.bat  demo.glfw.c  demo.ig.c  demo.raylib.c  demo.rgfw.c  demo.tigr.c  demo1.c  demo2.c  demo3.c  demo_atto.c  demo_glfw.c  demo_ig.c  demo_raylib.c  demo_rgfw.c  (+14 more)
docs/3rd/simple_wgsl/: CMakeLists.txt  README.md  TECHNICAL.md  TUTORIAL.md  spirv_to_ssir.c  ssir_to_glsl.c  ssir_to_hlsl.c  wgsl_parser.c
docs/3rd/simple_wgsl/example/: example.c  metal_triangle.m
docs/3rd/simple_wgsl/expressions/index/let/: array_nested_struct.wgsl  array_nested_struct.wgsl.expected.msl  array_nested_struct.wgsl.expected.spvasm  struct_nested_array.wgsl.expected.glsl  struct_nested_array.wgsl.expected.msl  struct_nested_multiple.wgsl  struct_nested_multiple.wgsl.expected.spvasm  struct_nested_multiple.wgsl.expected.wgsl  struct_nested_struct.wgsl  struct_nested_struct.wgsl.expected.fxc.hlsl  struct_with_matrix.wgsl  struct_with_matrix.wgsl.expected.glsl  struct_with_matrix.wgsl.expected.msl  struct_with_matrix.wgsl.expected.spvasm  struct_with_vector.wgsl  struct_with_vector.wgsl.expected.wgsl
docs/3rd/simple_wgsl/expressions/index/var/: array_nested_struct.wgsl  array_nested_struct.wgsl.expected.dxc.hlsl  array_nested_struct.wgsl.expected.spvasm  struct.wgsl  struct.wgsl.expected.msl  struct.wgsl.expected.wgsl  struct_nested_array.wgsl  struct_nested_array.wgsl.expected.spvasm  struct_nested_multiple.wgsl.expected.msl  (+9 more)
docs/3rd/simple_wgsl/expressions/literals/: intmin.wgsl.expected.glsl  intmin.wgsl.expected.msl  intmin.wgsl.expected.wgsl
docs/3rd/simple_wgsl/expressions/user_call/: call_with_call_param.wgsl  call_with_call_param.wgsl.expected.glsl  call_with_call_param.wgsl.expected.spvasm  call_with_call_param.wgsl.expected.wgsl  multi_param_no_return.wgsl.expected.glsl  multi_param_no_return.wgsl.expected.spvasm  multi_param_return.wgsl.expected.dxc.hlsl  multi_param_return.wgsl.expected.msl  multi_param_return.wgsl.expected.wgsl  nested.wgsl.expected.dxc.hlsl  nested.wgsl.expected.glsl  no_params_no_return.wgsl.expected.wgsl  no_params_return.wgsl.expected.wgsl  one_param_no_return.wgsl.expected.msl  one_param_no_return.wgsl.expected.wgsl  one_param_return.wgsl  one_param_return.wgsl.expected.msl  one_param_return.wgsl.expected.spvasm
docs/3rd/simple_wgsl/wgsl/: compute_basic.wgsl  transitive_vertex.wgsl  vertex_fragment.wgsl
(+2673 files in other folders)
